# pyspark_prometheus

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
etc/: prometheus.yml
pyspark_prometheus/: __init__.py  listener.py
tests/: test_listener.py
tests/integration/: test_socket_stream.py
tests/unit/: test_listener.py
