[tool.poetry]
name = "pyspark-prometheus"
version = "0.1.0"
description = ""
authors = ["Zachary King <zach@makewithdata.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = ">=3.5.0"
prometheus-client = ">=0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
responses = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--capture=no --strict-markers --cov=pyspark_prometheus --cov-report=html:coverage"

